# report-forge

./: CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  report_commands.rs
src-tauri/src/models/: mod.rs
src-tauri/src/processors/: excel_processor.rs  mod.rs  word_generator.rs
