[package]
name = "report-forge"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "report_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Excel处理
calamine = "0.26"

# Word文档生成
docx-rs = "0.4"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 实用工具
chrono = "0.4"
regex = "1.10"
log = "0.4"
env_logger = "0.11"

